# openvault

./: .gitignore  .lintstagedrc.ts  .prettierignore  BRAND.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  eslint.config.ts  package.json  prettier.config.ts  tsconfig.json  turbo.json
.agent/: GEMINI.md
.devcontainer/: README.md  devcontainer.json  post-create.sh
.husky/: pre-commit
apps/desktop/: .gitignore  eslint.config.ts  next.config.ts  package.json  prettier.config.ts  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: errors.rs  lib.rs  models.rs  protocols.rs  state.rs
apps/desktop/src-tauri/src/commands/: contracts.rs  filesystem.rs  mod.rs  responses.rs  vault.rs
apps/desktop/src-tauri/src/commands/filesystem/: commands.rs  contracts.rs
apps/desktop/src-tauri/src/commands/messages/: commands.rs  contracts.rs  mod.rs
apps/desktop/src-tauri/src/commands/vault/: commands.rs  contracts.rs
apps/desktop/src-tauri/src/internal/: format.rs  mime_type.rs  mod.rs  parser.rs  ttl_cache.rs
apps/desktop/src-tauri/src/protocols/: mod.rs  response.rs  secure.rs
apps/desktop/src-tauri/src/tasks/: cleanup.rs  mod.rs
apps/desktop/src/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/desktop/src/app/(locked)/select/: index.tsx  useVaultSelection.ts
apps/desktop/src/app/(locked)/setup/: useSetupVault.ts
apps/desktop/src/app/create/: page.tsx  useSetupVault.ts
apps/desktop/src/app/dashboard/: layout.tsx  page.tsx
apps/desktop/src/components/functional/: FileDropListener.tsx
apps/desktop/src/components/icons/: Brand.tsx  OpenVaultLogo.tsx  index.ts
apps/desktop/src/components/layout/: grid-background.tsx
apps/desktop/src/components/ui/: password-strength.tsx
apps/desktop/src/components/views/: FileDropOverlayView.tsx
apps/desktop/src/config/: env.ts  hrefs.ts  keycodes.ts
apps/desktop/src/context/: VaultContext.tsx  vault-session.tsx
apps/desktop/src/features/providers/: index.ts  route-guard.tsx
apps/desktop/src/features/vault-access/: index.tsx
apps/desktop/src/hooks/: useDialogState.ts  useFileDragDrop.ts  useKeyListeners.ts  useLocalStorage.ts  useMediaQuery.ts  usePreventBackspaceNavigation.ts  useResponsive.ts
apps/desktop/src/libraries/: crypto.ts  fetch.ts  lodash.ts  logger.ts  react-query.tsx  tauri-api.ts
apps/desktop/src/styles/: animations.css  globals.css
apps/desktop/src/types/: filesystem.ts  general.ts  messages.ts  react.ts
apps/desktop/src/utils/: format.ts  mime-types.ts  navigator.ts  routes.ts  safe-parse.ts
apps/desktop/tests/: setup.ts
apps/desktop/tests/frontend/hooks/: useDialogState.test.ts  useFileDragDrop.test.ts  useLocalStorage.test.ts  useMediaQuery.test.ts  useResponsive.test.ts
apps/desktop/tests/frontend/libraries/: crypto.test.ts  lodash.test.ts
apps/desktop/tests/frontend/utils/: cn.test.ts  format.test.ts  mime-types.test.ts  navigator.test.ts  routes.test.ts  safe-async.test.ts  safe-parse.test.ts
docs/: architecture-v1.md  architecture.md
(+230 files in other folders)
