[workspace]
members = [
  "apps/desktop/src-tauri",
  "packages/crypto",
  "packages/core",
  "packages/sdk"
]
resolver = "3"

[workspace.dependencies]
openvault-core = { path = "packages/core" }
openvault-crypto = { path = "packages/crypto" }
openvault-sdk = { path = "packages/sdk" }
byteorder = { version = "1.5.0" }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
